fix: Remove vercel.json configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
   "buildCommand": "",
-  "devCommand": "",
-  "installCommand": "",
-  "framework": "static",
+  "framework": null,
   "outputDirectory": "."
 }
